:bug: Fix responsive cards breaking with custom scrollbar on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -179,6 +179,12 @@ body {
   font-family: 'Audiowide', cursive;
 }
 
+@media (max-width: 800px) {
+  html, body {
+  overflow-x: hidden;
+  }
+}
+
 @keyframes fadein {
   from {
       opacity:0;
